examples/test/testpolicy9034.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy9034
  namespace: namespace262
spec:
  podSelector:
    matchLabels:
      key49: value19
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key22: value2
          key31: value30
          key48: value8
      podSelector:
        matchLabels:
          key6: value38
          key46: value31
          key20: value27
